# geany-multiterm

./: .gitignore  README  README.md  autogen.sh  configure.ac
data/: ui.glade
src/: Makefile.am  Makefile.orig  config.c  config.vala  iterminal.c  multiterm.h  multiterm.vala  notebook.c  notebook.vala  plugin.c  plugin.vala  python.c  python.vala  ruby.c  ruby.vala  shell.c  shell.vala  tab-label.c  terminal.c  terminal.vala
src/vapi/: geany.vapi
